# VForScienceProjects

./: LICENSE  README.md
YIN_pitch_detection/: helper.py  pitch_detection.py  pitch_vals.json  requirements.txt
YIN_pitch_detection/contrib/: helper.py  pitch_detection_PabloSML.py
talking_piano/: .gitignore  Makefile  pyproject.toml
talking_piano/talking_piano/: genetic.py  main.py  utils.py
wavetable_synthesis/: main.py  pyproject.toml
