[tool.poetry]
name = "talking-piano"
version = "0.1.0"
description = ""
authors = ["Nicolaj Valsted <nicolaj.valsted@live.dk>"]
license = "MIT"

packages = [
    { include = "talking_piano" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
typer = "^0.4.0"
dawdreamer = "^0.5.8"
mido = "^1.2.10"
tqdm = "^4.63.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
manimgl = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
